--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <main class="conteudo">
       <section class="entrada">
         <div>
-            <!-- <label for="texto">Digite sua mensagem...</label> -->
+            <label for="texto"><img src="../assets/imgs/bi_exclamation-circle-fill.jpg" alt="">Apenas letras minúsculas e sem acento.</label>
             <textarea id="texto" class="conteudo__texto" type="text" name="texto" rows="30" cols="50"></textarea>
           </div>
           <div class="conteudo__botoes">
@@ -28,16 +28,16 @@
           <p id="resultado" class="conteudo__resultado"></p>
           <div id="imagens" class="conteudo__container">
             <div class="conteudo__imagem">
-              <img src="../assets/imgs/botao 2.png" alt="" />
-              <img src="../assets/imgs/botao 3.png" alt="" />
+              <img src="../assets/imgs/botao 2.png" alt="Ilustração rotor da the bombe" />
+              <img src="../assets/imgs/botao 3.png" alt="Ilustração rotor da the bombe" />
             </div>
             <div class="conteudo__imagem">
-              <img src="../assets/imgs/botao 2.png" alt="" />
-              <img src="../assets/imgs/botao 3.png" alt="" />
+              <img src="../assets/imgs/botao 2.png" alt="Ilustração rotor da the bombe" />
+              <img src="../assets/imgs/botao 3.png" alt="Ilustração rotor da the bombe" />
             </div>
             <div class="conteudo__imagem">
-              <img src="../assets/imgs/botao 1.png" alt="" />
-              <img src="../assets/imgs/botao 1.png" alt="" />
+              <img src="../assets/imgs/botao 1.png" alt="Ilustração rotor da the bombe" />
+              <img src="../assets/imgs/botao 1.png" alt="Ilustração rotor da the bombe" />
             </div>
           </div>
           <div class="mensagem">
@@ -51,7 +51,8 @@
       </section>
     </main>
     <footer>
-        <p>Desenvolvido por: <a class="link" href="https://github.com/Alexnderp" target="_blank">alexnderp</a></p>
+      <p>Desenvolvido por: <a class="link" href="https://github.com/Alexnderp" target="_blank">alexnderp</a></p>
+      <img class="marca" src="../assets/imgs/the bombe marca dagua.png" alt="marca d'agua the bombe">
     </footer>
   </body>
 </html>
