Feature: implementação da responsividade

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
             <textarea id="texto" class="conteudo__texto" type="text" name="texto" rows="30" cols="50"></textarea>
           </div>
           <div class="conteudo__botoes">
-            <button id="encriptar" onclick="encriptar()" class="conteudo__encriptar">Encriptar</button>
-            <button id="descriptar" onclick="descriptar()" class="conteudo__desencriptar">Desencriptar</button>
+            <button id="encriptar" onclick="encriptar()" class="conteudo__encriptar">Criptografar</button>
+            <button id="descriptar" onclick="descriptar()" class="conteudo__desencriptar">Descriptografar</button>
           </div>
       </section>
         
