--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css">
     <script src="./app.js" defer></script>
-    <link rel="icon" href="../assets/imgs/botao 1.png" type="image/x-icon">
+    <link rel="icon" href="./assets/imgs/botao 1.png" type="image/x-icon">
     <title>The Bombe</title>
   </head>
   <body>
     <header>
-        <img class="logo" src="../assets/imgs/LOGO THE BOMBE.png" alt="">
+        <img class="logo" src="./assets/imgs/LOGO THE BOMBE.png" alt="">
     </header>
     <main class="conteudo">
       <section class="entrada">
         <div>
-            <label for="texto"><img src="../assets/imgs/bi_exclamation-circle-fill.jpg" alt="">Apenas letras minúsculas e sem acento.</label>
-            <textarea id="texto" class="conteudo__texto" type="text" name="texto" rows="30" cols="50"></textarea>
+            <label for="texto"><img src="./assets/imgs/bi_exclamation-circle-fill.jpg" alt="">Apenas letras minúsculas e sem acento.</label>
+            <textarea id="texto" class="conteudo__texto" type="text" name="texto" rows="30" cols="50" placeholder="Digite sua mensagem aqui..."></textarea>
           </div>
           <div class="conteudo__botoes">
             <button id="encriptar" onclick="encriptar()" class="conteudo__encriptar">Criptografar</button>
@@ -28,16 +28,16 @@
           <p id="resultado" class="conteudo__resultado"></p>
           <div id="imagens" class="conteudo__container">
             <div class="conteudo__imagem">
-              <img src="../assets/imgs/botao 2.png" alt="Ilustração rotor da the bombe" />
-              <img src="../assets/imgs/botao 3.png" alt="Ilustração rotor da the bombe" />
+              <img src="./assets/imgs/botao 2.png" alt="Ilustração rotor da the bombe" />
+              <img src="./assets/imgs/botao 3.png" alt="Ilustração rotor da the bombe" />
             </div>
             <div class="conteudo__imagem">
-              <img src="../assets/imgs/botao 2.png" alt="Ilustração rotor da the bombe" />
-              <img src="../assets/imgs/botao 3.png" alt="Ilustração rotor da the bombe" />
+              <img src="./assets/imgs/botao 2.png" alt="Ilustração rotor da the bombe" />
+              <img src="./assets/imgs/botao 3.png" alt="Ilustração rotor da the bombe" />
             </div>
             <div class="conteudo__imagem">
-              <img src="../assets/imgs/botao 1.png" alt="Ilustração rotor da the bombe" />
-              <img src="../assets/imgs/botao 1.png" alt="Ilustração rotor da the bombe" />
+              <img src="./assets/imgs/botao 1.png" alt="Ilustração rotor da the bombe" />
+              <img src="./assets/imgs/botao 1.png" alt="Ilustração rotor da the bombe" />
             </div>
           </div>
           <div class="mensagem">
@@ -52,7 +52,7 @@
     </main>
     <footer>
       <p>Desenvolvido por: <a class="link" href="https://github.com/Alexnderp" target="_blank">alexnderp</a></p>
-      <img class="marca" src="../assets/imgs/the bombe marca dagua.png" alt="marca d'agua the bombe">
+      <img class="marca" src="./assets/imgs/the bombe marca dagua.png" alt="marca d'agua the bombe">
     </footer>
   </body>
 </html>
