--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     <main class="conteudo">
       <section class="entrada">
         <div>
-            <label for="texto"><img src="./assets/imgs/bi_exclamation-circle-fill.jpg" alt="">Apenas letras minúsculas e sem acento.</label>
-            <textarea id="texto" class="conteudo__texto" type="text" name="texto" rows="30" cols="50" placeholder="Digite sua mensagem aqui..."></textarea>
+            <textarea id="texto" class="conteudo__texto" type="text" name="texto" rows="30" cols="90" placeholder="Digite sua mensagem aqui..."></textarea>
+            <p id="msg"><img src="./assets/imgs/bi_exclamation-circle-fill.jpg" alt="">Apenas letras minúsculas e sem acento.</p>
           </div>
           <div class="conteudo__botoes">
             <button id="encriptar" onclick="encriptar()" class="conteudo__encriptar">Criptografar</button>
